<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/gradient">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="60sp"
        android:text="@string/andwallet"
        android:layout_marginTop="106dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/tvIncome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/incomeSummary"
        android:layout_marginLeft="13dp"
        android:layout_marginStart="13dp"
        android:layout_alignBaseline="@+id/tvExpense"
        android:layout_alignBottom="@+id/tvExpense"
        android:layout_alignLeft="@+id/tvInfo"
        android:layout_alignStart="@+id/tvInfo" />

    <TextView
        android:id="@+id/tvExpense"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/expenseSummary"
        android:layout_centerVertical="true"
        android:layout_alignRight="@+id/tvTitle"
        android:layout_alignEnd="@+id/tvTitle" />

    <TextView
        android:id="@+id/tvInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/this_view_shows_your_current_balance"
        android:layout_below="@+id/tvTitle"
        android:layout_centerHorizontal="true" />

    <ImageView
        android:id="@+id/bracket"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/bracket"
        android:scaleType="fitXY"
        android:layout_marginTop="36dp"
        android:layout_below="@+id/tvIncome"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/tvTotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:text="@string/total"
        android:layout_marginTop="40dp"
        android:layout_below="@+id/bracket"
        android:layout_centerHorizontal="true" />



</RelativeLayout>
