<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="hu.ait.android.andwallet.MainActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#2196F3"
        android:minHeight="?attr/actionBarSize" />

    <EditText
        android:id="@+id/etAdd"
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:hint="@string/enter_name_here"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_below="@+id/toolbar"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="14dp" />

    <EditText
        android:id="@+id/etAmount"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:hint="@string/enter_value"
        android:inputType="number"
        android:layout_marginRight="23dp"
        android:layout_marginEnd="23dp"
        android:layout_alignBaseline="@+id/etAdd"
        android:layout_alignBottom="@+id/etAdd"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:id="@+id/btnToggle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/income"
        android:layout_below="@+id/etAdd"
        android:layout_alignLeft="@+id/etAdd"
        android:layout_alignStart="@+id/etAdd" />

    <Button
        android:id="@+id/btnSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:layout_below="@+id/etAmount"
        android:layout_alignRight="@+id/etAmount"
        android:layout_alignEnd="@+id/etAmount" />

    <TextView
        android:id="@+id/tvBalance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_above="@+id/scrollView"
        android:layout_centerHorizontal="true" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/btnToggle"
        android:id="@+id/scrollView"
        android:layout_alignLeft="@+id/btnToggle"
        android:layout_alignStart="@+id/btnToggle">

        <LinearLayout
            android:id="@+id/layoutContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


        </LinearLayout>

    </ScrollView>





</RelativeLayout>